# rvlc

./: .gitattributes  .gitignore  Cargo.toml  LICENCE  README.md
libvlc-sys/: Cargo.toml  build.rs  wrapper.h
libvlc-sys/src/: helper.c  helper.h
libvlc-sys/src/tests/: simple.rs
media/: licences.txt
rvlc/: Cargo.toml
rvlc/examples/: modfile.rs  youtube.rs
rvlc/src/: ffi_macros.rs  internal_error.rs  lib.rs  media.rs  player.rs  prelude.rs  traits.rs  vlc.rs
rvlc/src/media/: media_options.rs
