[package]
name = "rvlc"
version = "0.1.0"
authors = ["Raffael Zica <1042414+SirJson@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libvlc-sys = { path = "../libvlc-sys" }
nix = "0.20"
cstr = "0.2"
flags = "0.1.5"
log = "0.4"
string_enum = "0.3.1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
env_logger = "0.8"
signal-hook = {version= "0.3", features = ["channel","iterator","extended-siginfo"]}